more work on updating VampireLib